<resources>

    <string name="app_name" translatable="false">EubViewer</string>

    <string name="andada" translatable="false">Andada</string>
    <string name="lato" translatable="false">Lato</string>
    <string name="lora" translatable="false">Lora</string>
    <string name="raleway" translatable="false">Raleway</string>

    <string name="andada_font" translatable="false">fonts/andada/Andada-Regular.otf</string>
    <string name="lato_font" translatable="false">fonts/lato/Lato-Regular.ttf</string>
    <string name="lora_font" translatable="false">fonts/lora/Lora-Regular.ttf</string>
    <string name="raleway_font" translatable="false">fonts/raleway/Raleway-Regular.ttf</string>

    <string name="minutes_left">%1$d minutes ·&#160;</string>
    <string name="minute_left">%1$d minute ·&#160;</string>
    <string name="less_than_minute">Less than a minute ·&#160;</string>

    <string name="copied">Copied</string>
    <string name="send_to">Send to</string>

    <string name="pages_left">%1$d pages left</string>
    <string name="page_left">%1$d page left</string>
    <string name="highlights">Highlights</string>
    <string name="half_speed">1/2x</string>
    <string name="onex">1x</string>
    <string name="one_and_half">1&#160;1/2x</string>
    <string name="two_x">2x</string>
    <string name="style">Style</string>
    <string name="style_underline"><![CDATA[<u style=\" border-bottom: 1px dashed #bcbcbc;   text-decoration: none;\">Style</u>]]></string>
    <string name="full_path">full-path</string>
    <string name="error_goToPage">goToPage error:</string>
    <string name="zip">.zip</string>
    <string name="htmlBodyTableOpen">&lt;html&gt;&lt;body&gt;&lt;table&gt;</string>
    <string name="titlesMeta">&lt;tr&gt;&lt;td&gt;Titles:&lt;/td&gt;</string>
    <string name="authorsMeta">&lt;tr&gt;&lt;td&gt;Authors:&lt;/td&gt;</string>
    <string name="contributorsMeta">&lt;tr&gt;&lt;td&gt;Contributors:&lt;/td&gt;</string>
    <string name="languageMeta">&lt;tr&gt;&lt;td&gt;Language:&lt;/td&gt;&lt;td&gt;</string>
    <string name="publishersMeta">&lt;tr&gt;&lt;td&gt;Publishers:&lt;/td&gt;</string>
    <string name="typesMeta">&lt;tr&gt;&lt;td&gt;Types:&lt;/td&gt;</string>
    <string name="descriptionsMeta">&lt;tr&gt;&lt;td&gt;Descriptions:&lt;/td&gt;</string>
    <string name="rightsMeta">&lt;tr&gt;&lt;td&gt;Rights:&lt;/td&gt;</string>
    <string name="tablebodyhtmlClose">&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
    <string name="tocReference">&lt;tr&gt;&lt;td&gt;Table of Contents:&lt;/td&gt;</string>
    <string name="change_Font">Change Font</string>
    <string name="change_Font_Color">Font Color:</string>
    <string name="changeStyle">Change Style</string>
    <string name="blue_rgb">#0000ff</string>
    <string name="red_rgb">#ff0000</string>
    <string name="green_rgb">#00ff00</string>
    <string name="black_rgb">#000000</string>
    <string name="white_rgb">#ffffff</string>
    <string name="error_CannotChangeStyle">Cannot Change Style!</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="SetSizeTitle">Upper Panel Size:</string>
    <string name="LanguageChooserTitle">Choose two languages:</string>
    <string name="parallelTextBool">parallelTextBool</string>
    <string name="loading">Loading</string>
    <string name="please_wait">please wait...</string>
    <string name="one_and_half_speed"><![CDATA[1<sup>1</sup>/<sub>2</sub>x]]></string>
    <string name="half_speed_text"><![CDATA[<sup>1</sup>/<sub>2</sub>x]]></string>
    <string name="please_wait_till_audio_is_parsed">please wait till audio is been parsed, Retry after some time</string>
    <string name="audio_mark_id">javascript:alert(audioMarkID(\'epub-media-overlay-playing\',\'%s\'))</string>
    <string name="setmediaoverlaystyle">javascript:setMediaOverlayStyle(\'%s\')</string>
    <string name="go_to_anchor" translatable="false">javascript:goToAnchor(\'%s\')</string>
    <string name="go_to_highlight" translatable="false">javascript:goToHighlight(\'%s\')</string>
    <string name="sethighlightstyle">javascript:setHighlightStyle(\'%s\');</string>
    <string name="css_tag"><![CDATA[<link rel=\"stylesheet\" type=\"text/css\" href=\"%s\" />]]></string>
    <string name="script_tag"><![CDATA[<script type=\"text/javascript\" src=\"%s\"></script>]]></string>
    <string name="td_tag"><![CDATA[<td>%s</td></tr>]]></string>
    <string name="tr_tag"><![CDATA[<tr><td></td><td>%s</td></tr>]]></string>
    <string name="script_tag_method_call"><![CDATA[<script type=\"text/javascript\">%s</script>]]></string>
    <string name="underline_highlights">
        <span style="border-bottom: 1px solid #ff0000;">%s</span>
    </string>
    <string name="edit_notes">Save your note</string>
    <string name="save_note">Save note</string>
    <string name="please_enter_note">please enter a note</string>
    <string name="contents">Contents</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="debug_start_drag">Starting drag!</string>
    <string name="debug_start_unable_drag">Starting unable to drag!</string>
    <string name="dictionary">Dictionary</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="cannot_access_epub_message">Cannot open epub it needs storage access !</string>
    <string name="direction_horizontal">Horizontal</string>
    <string name="direction_vertical">Vertical</string>

    <string name="xhtml_mime_type" translatable="false">application/xhtml+xml</string>
    <string name="html_mime_type" translatable="false">text/html</string>

    <string name="search_hint">Search In Book</string>

    <plurals name="numberOfSearchResults">
        <item quantity="one">%d result</item>
        <item quantity="other">%d results</item>
    </plurals>

    <!-- JS Calls -->
    <string name="callComputeLastReadCfi" translatable="false">javascript:computeLastReadCfi()</string>
    <string name="callScrollToCfi" translatable="false">javascript:scrollToCfi(\"%s\")</string>
    <string name="callHighlightSearchLocator" translatable="false">javascript:highlightSearchLocator(\"%s\")</string>
    <string name="callClearSelection" translatable="false">javascript:clearSelection()</string>


    <string name="menu_item_setting">Setting</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_bookmark">Bookmark</string>

    <string name="menu_item_list">목록</string>
    <string name="menu_item_record">독서기록</string>
    <string name="menu_item_comment">댓글</string>
    <string name="menu_item_review">리뷰</string>
    <string name="menu_item_prev">이전</string>
    <string name="menu_item_next">다음</string>

    <string name="layout_search_button_name">검색</string>
    <string name="layout_search_empty">검색 결과가 없습니다.</string>
    <string name="layout_search_fail">검색중 오류가 발생하였습니다.\n잠시 후 다시 시도해 주시기 바랍니다.</string>

    <string name="layout_record_tab_bookmark">책갈피</string>
    <string name="layout_record_tab_highlight">하이라이트</string>
    <string name="layout_record_tab_memo">메모</string>
    <string name="layout_record_empty_bookmark">저장된 책갈피가 없어요.\n마음에 드는 문장을 기록해보세요.</string>
    <string name="layout_record_empty_highlight">저장된 하이라이트가 없어요.\n마음에 드는 문장을 기록해보세요.</string>
    <string name="layout_record_empty_memo">저장된 메모가 없어요.\n마음에 드는 문장을 기록해보세요.</string>
    <string name="layout_record_edit">편집</string>
    <string name="layout_record_edit_cancel">편집 취소</string>
    <string name="layout_record_edit_select_all">전체선택</string>
    <string name="layout_record_edit_cancel_all">전체취소</string>
    <string name="layout_record_edit_delete">삭제</string>
    <string name="layout_record_sort_page">페이지순</string>
    <string name="layout_record_sort_register">등록일순</string>
    <string name="layout_record_page_text">%d페이지</string>
    <string name="layout_record_modal_bookmark_delete">책갈피 삭제</string>
    <string name="layout_record_modal_highlight_delete">하이라이트 삭제</string>
    <string name="layout_record_modal_memo_delete">메모 삭제</string>
    <string name="layout_record_modal_highlight_share">공유</string>
    <string name="layout_record_modal_highlight_memo">메모 등록/수정</string>
    <string name="layout_record_modal_highlight_cancel">취소</string>
    <string name="layout_record_dialog_remove_bookmark">총 %1d개의 책갈피를 삭제하시겠습니까?</string>
    <string name="layout_record_dialog_remove_highlight">총 %1d개의 하이라이트를 삭제하시겠습니까?</string>
    <string name="layout_record_dialog_remove_memo">총 %1d개의 메모를 삭제하시겠습니까?</string>

    <string name="layout_left_info_more">더보기</string>
    <string name="layout_left_info_index">목차</string>
    <string name="layout_left_info_list">단행본 목록</string>

    <string name="layout_text_selection_highlight_add">강조 추가</string>
    <string name="layout_text_selection_highlight_remove">강조 삭제</string>
    <string name="layout_text_selection_highlight_bookmark">책갈피</string>
    <string name="layout_text_selection_highlight_memo">메모</string>
    <string name="layout_text_selection_highlight_share">공유</string>
    <string name="layout_text_selection_highlight_declare">오탈자 신고</string>

    <string name="layout_setting_font_style">글꼴</string>
    <string name="layout_setting_font_size">크기</string>
    <string name="layout_setting_font_line_space">줄간격</string>
    <string name="layout_setting_font_white_space">좌우여백</string>
    <string name="layout_setting_alignment">문단정렬</string>
    <string name="layout_setting_alignment_left">왼쪽정렬</string>
    <string name="layout_setting_alignment_both">양쪽정렬</string>
    <string name="layout_setting_page">페이지</string>
    <string name="layout_setting_page_tb">상하</string>
    <string name="layout_setting_page_lr">좌우</string>
    <string name="layout_setting_page_scroll">스크롤</string>
    <string name="layout_setting_effect">넘김효과</string>
    <string name="layout_setting_theme">테마</string>
    <string name="layout_setting_brightness">밝기</string>
    <string name="layout_setting_night_mode">야간 모드 설정 시, 블루라이트가 차단됩니다.</string>
    <string name="layout_setting_detail_open">탭하여 상세설정 열기</string>
    <string name="layout_setting_detail_close">탭하여 상세설정 닫기</string>

    <string name="common_dialog_btn_yes">확인</string>
    <string name="common_dialog_btn_no">취소</string>

</resources>
