<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.folioreader.ui.activity.FolioActivity">

    <item
        android:id="@+id/itemSetting"
        android:icon="@drawable/ic_nav_setting_gr"
        android:title="@string/menu_item_setting"
        app:showAsAction="ifRoom"
        tools:showAsAction="always" />

    <item
        android:id="@+id/itemSearch"
        android:icon="@drawable/ic_nav_search_gr"
        android:title="@string/menu_item_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemBookmark"
        android:icon="@drawable/ic_nav_bookmark_gr"
        android:title="@string/menu_item_bookmark"
        app:showAsAction="ifRoom" />

</menu>