<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_bottom_bar"
    android:background="@color/layout_bottom_background"
    android:layout_width="match_parent"
    android:layout_height="66dp"
    tools:layout_gravity="bottom">

    <Button
        android:id="@+id/btn_list"
        android:drawableTop="@drawable/ic_nav_list_gr"
        android:text="@string/menu_item_list"
        style="@style/MainBottomMenuStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_record"
        android:drawableTop="@drawable/ic_nav_book_gr"
        android:text="@string/menu_item_record"
        style="@style/MainBottomMenuStyle"
        app:layout_constraintStart_toEndOf="@id/btn_list"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_comment"
        android:drawableTop="@drawable/ic_nav_comment_gr"
        android:text="@string/menu_item_comment"
        style="@style/MainBottomMenuStyle"
        app:layout_constraintStart_toEndOf="@id/btn_record"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_review"
        android:drawableTop="@drawable/ic_nav_review_gr"
        android:text="@string/menu_item_review"
        style="@style/MainBottomMenuStyle"
        app:layout_constraintStart_toEndOf="@id/btn_comment"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_next_book"
        android:drawableEnd="@drawable/ic_arrow_line_right_gr"
        android:text="@string/menu_item_next"
        style="@style/MainBottomDirectionStyle"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/devideLine"
        android:layout_width="1dp"
        android:layout_height="11dp"
        android:background="@color/layout_bottom_button_direction_color"
        android:layout_marginEnd="8.5dp"
        app:layout_constraintEnd_toStartOf="@id/btn_next_book"
        app:layout_constraintTop_toTopOf="@id/btn_next_book"
        app:layout_constraintBottom_toBottomOf="@id/btn_next_book" />

    <Button
        android:id="@+id/btn_prev_book"
        android:drawableStart="@drawable/ic_arrow_line_left_gr"
        android:text="@string/menu_item_prev"
        style="@style/MainBottomDirectionStyle"
        android:layout_marginEnd="8.5dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintEnd_toStartOf="@id/devideLine"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>