<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/firstSectionLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_layout_border_round"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/highlight"
            style="@style/TextViewTextSelector"
            android:text="@string/layout_text_selection_highlight_add" />

        <View style="@style/TextViewSelectionDevideLine"/>

        <TextView
            android:id="@+id/bookmark"
            style="@style/TextViewTextSelector"
            android:text="@string/layout_text_selection_highlight_bookmark" />

        <View style="@style/TextViewSelectionDevideLine"/>

        <TextView
            android:id="@+id/memo"
            style="@style/TextViewTextSelector"
            android:text="@string/layout_text_selection_highlight_memo" />

        <View style="@style/TextViewSelectionDevideLine"/>

        <TextView
            android:id="@+id/share"
            style="@style/TextViewTextSelector"
            android:text="@string/layout_text_selection_highlight_share" />

        <View style="@style/TextViewSelectionDevideLine"/>

        <TextView
            android:id="@+id/declare"
            style="@style/TextViewTextSelector"
            android:text="@string/layout_text_selection_highlight_declare" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:rotation="180"
        android:adjustViewBounds="true"
        android:src="@drawable/custom_icon_arrow_top_to_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstSectionLayout"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>
