<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20459E"
    tools:layout_height="44dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btn_edit_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_nav_back_wt"
            tools:ignore="ContentDescription" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:gravity="center"
        android:text="@string/layout_record_edit"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/btn_edit_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/layout_record_edit_delete"
        android:includeFontPadding="false"
        android:textSize="13dp"
        android:textColor="@color/custom_delete_button_color"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_select"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/layout_record_edit_select_all"
        android:includeFontPadding="false"
        android:textSize="13dp"
        android:textColor="#FFFFFF"
        android:layout_marginEnd="22dp"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>