<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.folioreader.ui.fragment.RecordFragment">

    <RelativeLayout
        android:id="@+id/ll_top_bar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btn_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_nav_back"
                tools:ignore="ContentDescription" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#697383"
            android:textSize="16dp"
            android:gravity="center"
            android:text="@string/menu_item_record"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <include
        android:id="@+id/ll_edit_top"
        layout="@layout/layout_edit_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RelativeLayout
        android:id="@+id/ll_middle_bar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ll_top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_book_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_book_img"
            android:layout_width="71dp"
            android:layout_height="110dp"
            android:background="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_record_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textColor="#FFFFFF"
            android:textSize="12dp"
            android:layout_below="@+id/iv_book_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/vw_record_line"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_record_title"
            android:layout_marginTop="2dp">

            <View
                android:layout_width="1dp"
                android:layout_height="9.5dp"
                android:layout_gravity="center"
                android:background="#FFFFFF"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="총 1권"
            android:textColor="#FFFFFF"
            android:textSize="11dp"
            android:layout_centerVertical="true"
            android:layout_below="@+id/tv_record_title"
            android:layout_toStartOf="@+id/vw_record_line"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="6dp"/>

        <TextView
            android:id="@+id/tv_record_author"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:textColor="#FFFFFF"
            android:textSize="11dp"
            android:layout_below="@+id/tv_record_title"
            android:layout_toEndOf="@+id/vw_record_line"
            android:layout_marginTop="2dp"
            android:layout_marginStart="6dp"/>

        <ImageView
            android:id="@+id/iv_record_share"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_share"
            android:layout_alignEnd="@id/iv_book_bg"
            android:layout_alignBottom="@+id/iv_book_bg"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" />
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_record"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_middle_bar"
        app:tabIndicatorColor="#20459E"
        app:tabRippleColor="@android:color/transparent"
        app:tabSelectedTextColor="#20459E"
        app:tabTextAppearance="@style/TabTextSize"
        app:tabTextColor="#697383"
        app:tabMode="fixed"
        app:tabGravity="fill"
        app:tabMaxWidth="0dp"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_record_tab_bookmark"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_record_tab_highlight"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_record_tab_memo"/>
    </com.google.android.material.tabs.TabLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DBDFE4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_record" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="66dp"
        app:layout_constraintTop_toBottomOf="@id/tl_record"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>